5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4367/executions/1633_2938.log
== TEST (2019-04-02 19:04:06) 
-- CODE:
a= float(input("valor de a:"))
b= float(input("valor de b:"))
angulo= float(input("valor do angulo: "))
from math import
c= sqrt(a**2+b**2-2ab*cosangulo)
print(c)
-- ERROR:
File "XXXX", line 4
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:04:30) 
-- CODE:
a= float(input("valor de a:"))
b= float(input("valor de b:"))
angulo= float(input("valor do angulo: "))
from match import
c= sqrt(a**2+b**2-2ab*cosangulo)
print(c)
-- ERROR:
File "XXXX", line 4
    from match import
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:06:10) 
-- CODE:
a= float(input("valor de a:"))
b= float(input("valor de b:"))
y= float(input("valor do angulo: "))
from math import
c= sqrt(a**2+b**2-2ab*cos*y)
print(round(c, 2))
-- ERROR:
File "XXXX", line 4
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:06:41) 
-- CODE:
a= float(input("valor de a:"))
b= float(input("valor de b:"))
y= float(input("valor do angulo: "))

from math import
c= sqrt(a**2+b**2-2ab*cos*y)
print(round(c, 2))
-- ERROR:
File "XXXX", line 5
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:21:14) 
-- CODE:
a= float(input("distancia de a:"))
b= float(input("distancia de b:"))
y= float(input("valor do angulo em graus: "))

from math impor
c= sqrt(a**2+b**2-2ab*cos*y)
print(round(c, 2))
-- EXECUTION TIME:
0.188425
-- ERROR:
  File "/home/codebench/codes/1633/2938/main.py", line 5
    from math impor
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:21:16) 
-- CODE:
a= float(input("distancia de a:"))
b= float(input("distancia de b:"))
y= float(input("valor do angulo em graus: "))

from math impor
c= sqrt(a**2+b**2-2ab*cos*y)
print(round(c, 2))
-- ERROR:
File "XXXX", line 5
    from math impor
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:21:27) 
-- CODE:
a= float(input("distancia de a:"))
b= float(input("distancia de b:"))
y= float(input("valor do angulo em graus: "))

from math import
c= sqrt(a**2+b**2-2ab*cos*y)
print(round(c, 2))
-- ERROR:
File "XXXX", line 5
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:22:38) 
-- CODE:
from math import*
a= float(input("distancia de a:"))
b= float(input("distancia de b:"))
y= float(input("valor do angulo em graus: "))
c= sqrt(a**2+b**2-2ab*cos*y)
print(round(c, 2))
-- ERROR:
File "XXXX", line 5
    c= sqrt(a**2+b**2-2ab*cos*y)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:23:59) 
-- CODE:
from math import*
a= float(input("distancia de a:"))
b= float(input("distancia de b:"))
y= float(input("valor do angulo em graus: "))
c= sqrt(radians(a**2+b**2-2ab*cos*y))
print(round(c, 2))
-- ERROR:
File "XXXX", line 5
    c= sqrt(radians(a**2+b**2-2ab*cos*y))
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:24:09) 
-- CODE:
from math import*
a= float(input("distancia de a:"))
b= float(input("distancia de b:"))
y= float(input("valor do angulo em graus: "))
c= sqrt(radians(a**2+b**2-2a*b*cos*y))
print(round(c, 2))
-- ERROR:
File "XXXX", line 5
    c= sqrt(radians(a**2+b**2-2a*b*cos*y))
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:24:16) 
-- CODE:
from math import*
a= float(input("distancia de a:"))
b= float(input("distancia de b:"))
y= float(input("valor do angulo em graus: "))
c= sqrt(radians(a**2+b**2-2*a*b*cos*y))
print(round(c, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c= sqrt(radians(a**2+b**2-2*a*b*cos*y))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:24:59) 
-- CODE:
from math import*
a= float(input("distancia de a:"))
b= float(input("distancia de b:"))
y= input("valor do angulo em graus: ")
c= sqrt(radians(a**2+b**2-2*a*b*cos*y))
print(round(c, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c= sqrt(radians(a**2+b**2-2*a*b*cos*y))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:26:04) 
-- CODE:
from math import*
a= float(input("distancia de a:"))
b= float(input("distancia de b:"))
y= input("valor do angulo em graus: ")
c= sqrt(a**2+b**2-2*a*b*cos*radians(y))
print(round(c, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c= sqrt(a**2+b**2-2*a*b*cos*radians(y))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:26:47) 
-- CODE:
from math import*
a= float(input("distancia de a:"))
b= float(input("distancia de b:"))
y= input("valor do angulo em graus: ")
c= sqrt(a**2+b**2-2*a*b*cos*y)
print(round(c, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c= sqrt(a**2+b**2-2*a*b*cos*y)
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:27:19) 
-- CODE:
from math import*
a= float(input("distancia de a:"))
b= float(input("distancia de b:"))
y= float(input("valor do angulo em graus: "))
c= sqrt(a**2+b**2-2*a*b*cos*y)
print(round(c, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c= sqrt(a**2+b**2-2*a*b*cos*y)
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:28:34) 
-- CODE:
from math import*
a= float(input("distancia de a:"))
b= float(input("distancia de b:"))
y= float(input("valor do angulo em graus: "))
g= radians(y)
c= sqrt(a**2+b**2-2*a*b*cos*g)
print(round(c, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c= sqrt(a**2+b**2-2*a*b*cos*g)
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:29:21) 
-- CODE:
from math import*
a= float(input("distancia de a:"))
b= float(input("distancia de b:"))
y= float(input("valor do angulo em graus: "))
g= radians(y)
c= float(sqrt(a**2+b**2-2*a*b*cos*g))
print(round(c, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c= float(sqrt(a**2+b**2-2*a*b*cos*g))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:30:32) 
-- CODE:
from math import*
a= float(input("distancia de a:"))
b= float(input("distancia de b:"))
y= float(input("valor do angulo em graus: "))
g= radians(y)
c= sqrt(float(a**2+b**2-2*a*b*cos*g))
print(round(c, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c= sqrt(float(a**2+b**2-2*a*b*cos*g))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:31:02) 
-- CODE:
from math import*
a= float(input("distancia de a:"))
b= float(input("distancia de b:"))
y= float(input("valor do angulo em graus: "))
g= radians(y)
c= sqrt(radians(a**2+b**2-2*a*b*cos*g))
print(round(c, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c= sqrt(radians(a**2+b**2-2*a*b*cos*g))
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:32:13) 
-- CODE:
from math import*
a= float(input("distancia de a:"))
b= float(input("distancia de b:"))
y= float(input("valor do angulo em graus: "))
g= radians(y)
c= sqrt(a**2+b**2-2*a*b*cosg)
print(round(c, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c= sqrt(a**2+b**2-2*a*b*cosg)
NameError: name 'cosg' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:35:07) 
-- CODE:
from math import*
a= float(input("distancia de a:"))
b= float(input("distancia de b:"))
y= float(input("valor do angulo em graus: "))
cos= a/b
g= radians(y)
c= sqrt(a**2+b**2-2*a*b*cos*g)
print(round(c, 2))
-- OUTPUT:
5.47
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:36:06) 
-- CODE:
from math import*
a= float(input("distancia de a:"))
b= float(input("distancia de b:"))
y= float(input("valor do angulo em graus: "))
cos= b/a
g= radians(y)
c= sqrt(a**2+b**2-2*a*b*cos*g)
print(round(c, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    c= sqrt(a**2+b**2-2*a*b*cos*g)
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:37:33) 
-- CODE:
from math import*
a= float(input("distancia de a:"))
b= float(input("distancia de b:"))
y= float(input("valor do angulo em graus: "))
cos= a/b
g= radians(y)
c= sqrt(a**2+b**2-2*a*b*cos*g)
print(round(c, 2))
-- OUTPUT:
5.47
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:38:52) 
-- CODE:
from math import*
a= float(input("distancia de a:"))
b= float(input("distancia de b:"))
y= float(input("valor do angulo em graus: "))
g= radians(y)
c= sqrt(a**2+b**2-2*a*b*cos(radians(g))
print(round(c, 2))
-- ERROR:
File "XXXX", line 7
    print(round(c, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:39:44) 
-- CODE:
from math import*
a= float(input("distancia de a:"))
b= float(input("distancia de b:"))
y= float(input("valor do angulo em graus: "))
g= radians(y)
c= sqrt(a**2+b**2-2*a*b*cos(radians(g))
print(round(c, 2))
-- ERROR:
File "XXXX", line 7
    print(round(c, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:40:18) 
-- CODE:
from math import*
a= float(input("distancia de a:"))
b= float(input("distancia de b:"))
y= float(input("valor do angulo em graus: "))
g= radians(y)
c= sqrt(a**2+b**2-2*a*b*cos(g))
print(round(c, 2))
-- OUTPUT:
9.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:40:38) 
-- CODE:
from math import*
a= float(input("distancia de a:"))
b= float(input("distancia de b:"))
y= float(input("valor do angulo em graus: "))
g= radians(y)
c= sqrt(a**2+b**2-2*a*b*cos(g))
print(round(c, 2))
-- EXECUTION TIME:
0.138342
-- TEST CASE 1:
---- input:
8
10
60
---- correct output:
9.17
---- user output:
9.17
-- TEST CASE 2:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
17.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
